v1.3.7e updated the component style to provide suggestive action for user. revised the component toggle effect to align with the display method and fixed bugs like panel not showing(element id naming alignment) and cleanup javascript and css codes.

--- a/styles/content.css
+++ b/styles/content.css
@@ -1,3 +1,4 @@
+/* general app panel */
 .app-panel{
     z-index: 2147483640;
     position: fixed;
@@ -9,7 +10,6 @@
 
     box-shadow: 0 0 10px #888;
     border: #2f5876 1px solid;
-    display: block;
     background-color: #fff;
 
     font-size: 14px;
@@ -68,8 +68,6 @@
 
 /* app panel header button hover effect */
 .app-panel-header-button:hover {
-    /* background-color: #333;
-    color: #fff; */
     font-weight: bold;
 }
 
@@ -98,7 +96,6 @@
 .app-divider {
     background-color: #e5e5e5;
     height: 1px;
-    /* margin: 9px 0; */
     overflow: hidden;
     color: #333;
 }
@@ -119,4 +116,5 @@
 /* app button hover effect */
 .app-button:hover {
     box-shadow: 0px 0px 10px 10px #888;
+    cursor: pointer;
 }
